# CALM-Cognitive-Aware-Learning-Model

./: .gitignore  README.md  REFERENCES.md  pyproject.toml  requirements.txt
Unity_game/: index.html
backend/: database.py  main.py  models.py  schemas.py
models/: MLP_for_RAGandCAG.ipynb  best_mlp_model.pth
notebooks/: Combination.ipynb  Emotion_Recognition_progressive_training.ipynb  MLP_for_RAGandCAG.ipynb  inference_pipeline.py  react_model.ipynb
notebooks/.ipynb_checkpoints/: Combination-checkpoint.ipynb  Emotion_Recognition_progressive_training-checkpoint.ipynb  react_model-checkpoint.ipynb
ui/: answer_references.py  api_requests.py  api_utilities.py  app.py  auth.py  doc_input_utils.py  encouragement.py  export_pdf.py  improved_emotion_recognition.py  inference_pipeline.py  progressive_emotion_training.py  speech_utils.py  topic_cag_logic.py  unity_game_embed.py
